--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "solzeil\n"
+      "dd\n"
      ]
     }
    ],
    "source": [
-    "print('solzeil')\n"
+    "print('dd')\n"
    ]
   }
  ],
