start writting first question

--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -1,20 +1,35 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dd\n"
-     ]
-    }
-   ],
    "source": [
-    "print('dd')\n"
+    "In the continum limit, the Hamiltonian for a one-dimensional quantum wire with Rashba spin-orbit couplings reads \n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        H_W=\\int dy \\begin{pmatrix}\n",
+    "                        \\psi_{\\uparrow}^\\dagger & \\psi_{\\downarrow}^\\dagger\\\\\n",
+    "                    \\end{pmatrix}\\left(\\frac{p^2}{2m}-\\mu +\\alpha p \\sigma_z\\right)\\begin{pmatrix}\n",
+    "                        \\psi_{\\uparrow}\\\\\n",
+    "                        \\psi_{\\downarrow}\\\\\n",
+    "                    \\end{pmatrix}\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Let us denote $\\frac{p^2}{2m}-\\mu=:\\mathcal{E}(p)$. One can show that the Hamiltonian $H_W$ can be rewritten as follows\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        H_W=\\int dy \\psi_{\\uparrow}^\\dagger E_{\\uparrow}(p)\\psi_{\\uparrow}+\\int dy \\psi_{\\downarrow}^\\dagger E_{\\downarrow}(p)\\psi_{\\downarrow}\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "where $E_{\\uparrow \\downarrow}(p)=\\mathcal{E}(p) \\pm \\alpha p$.\n"
    ]
   }
  ],
