finish the first question

--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -8,6 +8,7 @@
     "\n",
     "$$\n",
     "\\begin{equation}\n",
+    "    \\tag{1}\n",
     "    \\begin{split}\n",
     "        H_W=\\int dy \\begin{pmatrix}\n",
     "                        \\psi_{\\uparrow}^\\dagger & \\psi_{\\downarrow}^\\dagger\\\\\n",
@@ -23,6 +24,7 @@
     "\n",
     "$$\n",
     "\\begin{equation}\n",
+    "    \\tag{2}\n",
     "    \\begin{split}\n",
     "        H_W=\\int dy \\psi_{\\uparrow}^\\dagger E_{\\uparrow}(p)\\psi_{\\uparrow}+\\int dy \\psi_{\\downarrow}^\\dagger E_{\\downarrow}(p)\\psi_{\\downarrow}\n",
     "    \\end{split}\n",
@@ -71,6 +73,37 @@
     "plt.legend(fontsize=18)\n",
     "plt.grid()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can notice that model is gapeless and a the spin degeneracy of the band structure is no longer valid.\n",
+    "The two bands associated to the the spin up and down crosses at zero momentum. On can show this analyticaly as follows\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\tag{3}\n",
+    "    \\begin{split}\n",
+    "        E_{\\uparrow}(p_c)=&E_{\\downarrow}(p_c)\\\\\n",
+    "        \\frac{p_c^2}{2m}-\\mu+\\alpha p_c=&\\frac{p_c^2}{2m}-\\mu-\\alpha p_c\\\\\n",
+    "        \\alpha p_c=&-\\alpha p_c \\underset{\\alpha\\neq 0}{\\Longrightarrow} p_c=0\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "The momenta at the bottom band can be find as follows :\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\tag{4}\n",
+    "    \\begin{split}\n",
+    "        \\frac{\\partial E_{\\uparrow \\downarrow}}{\\partial p}=0\\Longleftrightarrow& \\frac{p_{min}}{m}\\pm\\alpha=0\\\\\n",
+    "        \\Longleftrightarrow& p_{min}=\\mp \\alpha m\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$"
    ]
   }
  ],
