start the third question

--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -105,6 +105,96 @@
     "\\end{equation}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The s-wave superconducting pairing is introduced via \n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        H_\\Delta= \\Delta \\int dy \\left(\\psi_\\downarrow \\psi_\\uparrow+\\psi_\\uparrow^\\dagger\\psi_\\downarrow^\\dagger \\right)\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "We introduce the vector $\\vec{\\Psi}^\\dagger=\\begin{pmatrix} \\psi_\\uparrow^\\dagger & \\psi_\\downarrow^\\dagger & \\psi_\\downarrow &-\\psi_\\uparrow\\end{pmatrix}$ in order to rewrite the full Hamiltonian as follows :\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        H_W+H_B+H_\\Delta= \\frac{1}{2} \\int dy \\vec{\\Psi}^\\dagger h_p \\vec{\\Psi}\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "where $h_p$ is \n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        h_p=\\mathcal{E}(p)\\tau_z\\otimes \\mathbb{I}+\\alpha p \\tau_z\\otimes \\sigma_z +B\\mathbb{I}\\otimes \\sigma_x + \\Delta \\tau_x\\otimes  \\mathbb{I}\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "with $\\mathbb{I}$ beeing the identity, $\\sigma_i$ the Pauli matrices in the spin space and $\\tau_i$ the Pauli matices in the particle-hole space. In the basis $\\left(\\psi_\\uparrow^\\dagger , \\psi_\\downarrow^\\dagger , \\psi_\\downarrow ,\\psi_\\uparrow\\right)$ $h_p$ can be rewritten as follows :\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        h_p=&\\mathcal{E}(p)\\left(\n",
+    "    \\begin{array}{c|c}\n",
+    "      \\mathbb{I} & 0\\\\\n",
+    "      \\hline\n",
+    "      0 & -\\mathbb{I}\n",
+    "    \\end{array}\n",
+    "    \\right)+\\alpha p \\left(\n",
+    "    \\begin{array}{c|c}\n",
+    "      \\sigma_z & 0\\\\\n",
+    "      \\hline\n",
+    "      0 & -\\sigma_z\n",
+    "    \\end{array}\n",
+    "    \\right) +B\\left(\n",
+    "    \\begin{array}{c|c}\n",
+    "      \\sigma_x & 0\\\\\n",
+    "      \\hline\n",
+    "      0 & \\sigma_x\n",
+    "    \\end{array}\n",
+    "    \\right) + \\Delta \\left(\n",
+    "    \\begin{array}{c|c}\n",
+    "      0 & \\mathbb{I}\\\\\n",
+    "      \\hline\n",
+    "      \\mathbb{I} & 0\n",
+    "    \\end{array}\n",
+    "    \\right)\\\\\n",
+    "    =&\\mathcal{E}(p)\\underbrace{\\begin{pmatrix}\n",
+    "1 & 0 & 0 & 0\\\\\n",
+    "0& 1 & 0 & 0\\\\\n",
+    "0 &0 & -1 & 0\\\\\n",
+    "0 & 0 & 0 & -1\\\\\n",
+    "\\end{pmatrix}}_{M_{feg}}+\\alpha p \\underbrace{\\begin{pmatrix}\n",
+    "0 & 1 & 0 & 0\\\\\n",
+    "1& 0 & 0 & 0\\\\\n",
+    "0 &0 & 0 & -1\\\\\n",
+    "0 & 0 & -1 & 0\\\\\n",
+    "\\end{pmatrix}}_{M_{W}} +B\\underbrace{\\begin{pmatrix}\n",
+    "0 & 1 & 0 & 0\\\\\n",
+    "1& 0 & 0 & 0\\\\\n",
+    "0 &0 & 0 & 1\\\\\n",
+    "0 & 0 & 1 & 0\\\\\n",
+    "\\end{pmatrix}}_{M_{B}} + \\Delta \\underbrace{\\begin{pmatrix}\n",
+    "0 & 0 & 1 & 0\\\\\n",
+    "0& 0 & 0 & 1\\\\\n",
+    "1 &0 & 0 & 0\\\\\n",
+    "0 & 1 & 0 & 0\\\\\n",
+    "\\end{pmatrix}}_{M_{\\Delta}}\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
