--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -193,7 +193,66 @@
     "\\end{pmatrix}}_{M_{\\Delta}}\n",
     "    \\end{split}\n",
     "\\end{equation}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "One can then verifify that we obtain the following relations:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        \\vec{\\Psi}^\\dagger M_{\\Delta} \\vec{\\Psi}=&\\begin{pmatrix} \\psi_\\uparrow^\\dagger & \\psi_\\downarrow^\\dagger & \\psi_\\downarrow &-\\psi_\\uparrow\\end{pmatrix}\\begin{pmatrix}\n",
+    "0 & 0 & 1 & 0\\\\\n",
+    "0& 0 & 0 & 1\\\\\n",
+    "1 &0 & 0 & 0\\\\\n",
+    "0 & 1 & 0 & 0\\\\\n",
+    "\\end{pmatrix}\\begin{pmatrix} \\psi_\\uparrow\\\\\n",
+    "\\psi_\\downarrow\\\\\n",
+    "\\psi_\\downarrow^\\dagger\\\\\n",
+    "-\\psi_\\uparrow^\\dagger\n",
+    "\\end{pmatrix}\\\\\n",
+    "        =&\\psi_\\uparrow^\\dagger\\psi_\\downarrow^\\dagger+\\psi_\\downarrow\\psi_\\uparrow-\\psi_\\downarrow^\\dagger\\psi_\\uparrow^\\dagger-\\psi_\\uparrow\\psi_\\downarrow\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Using the anticommutation of the fermionic operators $\\left\\{\\psi_{\\downarrow}^\\dagger,\\psi_\\uparrow^\\dagger\\right\\}=0$ and $\\left\\{\\psi_{}\\uparrow,\\psi_\\downarrow\\right\\}=0$ One can write\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        \\vec{\\Psi}^\\dagger M_{\\Delta} \\vec{\\Psi}=&2\\left(\\psi_\\uparrow^\\dagger\\psi_\\downarrow^\\dagger+\\psi_\\downarrow\\psi_\\uparrow\\right)\\\\\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Hence \n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        \\frac{1}{2}\\Delta \\int dy \\vec{\\Psi}^\\dagger M_{\\Delta} \\vec{\\Psi}=&\\Delta \\int dy\\left(\\psi_\\uparrow^\\dagger\\psi_\\downarrow^\\dagger+\\psi_\\downarrow\\psi_\\uparrow\\right)\\\\\n",
+    "        =&H_\\Delta\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "The same way one can show that \n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        \\frac{1}{2}\\mathcal{E}(p) \\int dy \\vec{\\Psi}^\\dagger \\left(M_{feg}+M_W\\right) \\vec{\\Psi}=&H_W\\\\\n",
+    "        \\frac{1}{2}B \\int dy \\vec{\\Psi}^\\dagger M_B \\vec{\\Psi}=&H_B\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "which shows that \n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "        \\boxed{H_W + H_B +H_\\Delta=\\frac{1}{2}\\int dy \\vec{\\Psi}^\\dagger h_p \\vec{\\Psi}}\n",
+    "\\end{equation}\n",
+    "$$\n"
    ]
   }
  ],
