--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -254,6 +254,76 @@
     "\\end{equation}\n",
     "$$\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Three symmetries characterize the model, time-reversal symmetry $T=i\\sigma_y K$ ($K$ denotes complexconjugation), inversion symmetry $\\sigma_x$ and particle-hole symmetry $P=\\sigma_y \\tau_y K$.\n",
+    "In order to check the validity of these different symmetries one can divide $h_p$ as follows:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        h_p=\\underbrace{\\mathcal{E}(p)\\tau_z\\otimes \\mathbb{I}}_{h_{feg}(p)}+\\underbrace{\\alpha p \\tau_z\\otimes \\sigma_z}_{h_{W}(p)} +\\underbrace{B\\mathbb{I}\\otimes \\sigma_x}_{h_{B}(p)} + \\underbrace{\\Delta \\tau_x\\otimes  \\mathbb{I}}_{h_{\\Delta}(p)}\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Let us start with the first term :\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        Ph_{feg}(p)P=& \\mathcal{E}(p)\\left(\\tau_y\\otimes \\sigma_y K\\right) \\left(\\tau_z \\otimes \\mathbb{I}\\right) \\left(\\tau_y\\otimes \\sigma_y K\\right)\\\\\n",
+    "        =& \\mathcal{E}(p)\\left(\\tau_y\\otimes \\sigma_y K\\right)\\left( \\tau_z \\tau_y \\otimes\\sigma_y\\right) K\\\\\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "We use the fact that $\\tau_z\\tau_y=-\\tau_y\\tau_z=-i\\tau_x$\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        Ph_{feg}(p)P=& \\mathcal{E}(p)\\left(\\tau_y\\otimes \\sigma_y K\\right)\\left( \\tau_x \\otimes-i\\sigma_y\\right) K\\\\\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Then since $-i\\sigma_y=\\begin{pmatrix}0&-1\\\\1&0\\end{pmatrix}$ has only real components, we can get rid of the complex conjugation operators.\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        Ph_{feg}(p)P=& \\mathcal{E}(p)\\left(\\tau_y\\otimes \\sigma_y \\right)\\left( \\tau_x \\otimes-i\\sigma_y\\right) \\\\\n",
+    "        =&\\mathcal{E}(p)\\left( \\tau_y\\tau_x \\otimes-i\\sigma_y\\sigma_y\\right) \\\\\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "We the use $\\tau_y\\tau_x=-i\\tau_x\\tau_y=-i\\tau_z$ and $\\sigma_y\\sigma_y=\\mathbb{I}$.\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        Ph_{feg}(p)P=&\\mathcal{E}(p)\\left( -i\\tau_z\\otimes-i\\mathbb{I}\\right) \\\\\n",
+    "        =&-\\mathcal{E}(p)\\left( \\tau_z\\otimes\\mathbb{I}\\right) \\\\\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Since we have $\\mathcal{E}(p)=\\mathcal{E}(-p)$ we get \n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "        \\boxed{Ph_{feg}(p)P=-\\mathcal{E}(-p)\\left( \\tau_z\\otimes\\mathbb{I}\\right)=-h_{feg}(-p)}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
