add numbers quesion

--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question 1\n",
+    "\n",
     "In the continum limit, the Hamiltonian for a one-dimensional quantum wire with Rashba spin-orbit couplings reads \n",
     "\n",
     "$$\n",
@@ -110,6 +112,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question 3\n",
+    "\n",
     "The s-wave superconducting pairing is introduced via \n",
     "\n",
     "$$\n",
@@ -259,6 +263,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question 5\n",
+    "\n",
     "Three symmetries characterize the model, time-reversal symmetry $T=i\\sigma_y K$ ($K$ denotes complexconjugation), inversion symmetry $\\sigma_x$ and particle-hole symmetry $P=\\sigma_y \\tau_y K$.\n",
     "In order to check the validity of these different symmetries one can divide $h_p$ as follows:\n",
     "\n",
@@ -322,6 +328,58 @@
     "\\end{equation}\n",
     "$$\n",
     "\n",
+    "For the second term we have\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        Ph_{W}(p)P=& \\alpha p\\left(\\tau_y\\otimes \\sigma_y K\\right) \\left(\\tau_z \\otimes \\sigma_z\\right) \\left(\\tau_y\\otimes \\sigma_y K\\right)\\\\\n",
+    "        =& \\alpha p\\left(\\tau_y\\otimes \\sigma_y K\\right)\\left( \\tau_z \\tau_y \\otimes \\sigma_z \\sigma_y\\right) K\\\\\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "we use $\\tau_z\\tau_y=-i\\tau_x$ and $\\sigma_z\\sigma_y=-i\\sigma_x$.\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        Ph_{W}(p)P=& \\alpha p\\left(\\tau_y\\otimes \\sigma_y K\\right)\\left( -i\\tau_x\\otimes -i\\sigma_x\\right) K\\\\\n",
+    "        =&-\\alpha p\\left(\\tau_y\\otimes \\sigma_y K\\right)\\left( \\tau_x\\otimes \\sigma_x\\right) K\\\\\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Since we have only real component we can get rid of the complex conjugation operators.\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        Ph_{W}(p)P=& -\\alpha p\\left(\\tau_y\\otimes \\sigma_y\\right)\\left( \\tau_x\\otimes \\sigma_x\\right) \\\\\n",
+    "        =&-\\alpha p \\tau_y\\tau_x\\otimes \\sigma_y\\sigma_x \\\\\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "we use $\\tau_y\\tau_x=-i\\tau_z$ and $\\sigma_y\\sigma_x=-i\\sigma_z$. Hence\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        Ph_{W}(p)P=&-(-i)^2\\alpha p \\tau_z\\otimes \\sigma_z \\\\\n",
+    "        =&\\alpha p \\tau_z\\otimes \\sigma_z \\\\\n",
+    "        =&-\\alpha(-p)\\tau_z\\otimes \\sigma_z \\\\\n",
+    "    \\end{split}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Thus we get\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    \\boxed{Ph_{W}(p)P=-h_W(-p)}\n",
+    "\\end{equation}\n",
+    "$$\n",
     "\n"
    ]
   }
