--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -112,6 +112,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Graphique ntm](https://www.desmos.com/calculator/3qn5p1yiud?lang=fr)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Question 3\n",
     "\n",
     "The s-wave superconducting pairing is introduced via \n",
