--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -187,10 +187,10 @@
     "0 &0 & -1 & 0\\\\\n",
     "0 & 0 & 0 & -1\\\\\n",
     "\\end{pmatrix}}_{M_{feg}}+\\alpha p \\underbrace{\\begin{pmatrix}\n",
-    "0 & 1 & 0 & 0\\\\\n",
-    "1& 0 & 0 & 0\\\\\n",
-    "0 &0 & 0 & -1\\\\\n",
-    "0 & 0 & -1 & 0\\\\\n",
+    "0 & 0 & 0 & 0\\\\\n",
+    "0& -1 & 0 & 0\\\\\n",
+    "0 &0 & -1 & 0\\\\\n",
+    "0 & 0 & 0 & 1\\\\\n",
     "\\end{pmatrix}}_{M_{W}} +B\\underbrace{\\begin{pmatrix}\n",
     "0 & 1 & 0 & 0\\\\\n",
     "1& 0 & 0 & 0\\\\\n",
@@ -387,6 +387,159 @@
     "    \\boxed{Ph_{W}(p)P=-h_W(-p)}\n",
     "\\end{equation}\n",
     "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 7\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "empty matrix Hamiltonian of size 8*8\n",
+      "[[0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#define the different interaction parameters\n",
+    "\n",
+    "t=1\n",
+    "mu=1\n",
+    "alpha=1\n",
+    "B=1\n",
+    "Delta=1\n",
+    "\n",
+    "# define the size of the chain\n",
+    "N=2\n",
+    "\n",
+    "#define the empty matrix Hamiltonian\n",
+    "\n",
+    "H=np.zeros((4*N, 4*N),dtype=np.complex_)\n",
+    "print('empty matrix Hamiltonian of size '+str(4*N)+'*'+str(4*N))#check that we have the correct matrix\n",
+    "print(H)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define the functions that add the different terms to the Hamiltonian\n",
+    "\n",
+    "def hopping_terms(t,H,N):\n",
+    "    for i in range (0,N-1):\n",
+    "        H[4*i+4][4*i]=H[4*i+4][4*i]-t/4\n",
+    "        H[4*i+5][4*i+1]=H[4*i+5][4*i+1]-t/4\n",
+    "        H[4*i+6][4*i+2]=H[4*i+6][4*i+2]+t/4\n",
+    "        H[4*i+7][4*i+3]=H[4*i+7][4*i+3]+t/4\n",
+    "\n",
+    "        H[4*i][4*i+4]=H[4*i][4*i+4]-t/4\n",
+    "        H[4*i+1][4*i+5]=H[4*i+1][4*i+5]-t/4\n",
+    "        H[4*i+2][4*i+6]=H[4*i+2][4*i+6]+t/4\n",
+    "        H[4*i+3][4*i+7]=H[4*i+3][4*i+7]+t/4\n",
+    "    return H\n",
+    "\n",
+    "\n",
+    "def rashba_spin_orbit_coupling(alpha,H,N):\n",
+    "    for i in range (0,N-1):\n",
+    "        H[4*i+4][4*i]=H[4*i+4][4*i]-(alpha)/4*1j\n",
+    "        H[4*i+5][4*i+1]=H[4*i+5][4*i+1]+(alpha)/4*1j\n",
+    "        H[4*i+6][4*i+2]=H[4*i+6][4*i+2]-(alpha)/4*1j\n",
+    "        H[4*i+7][4*i+3]=H[4*i+7][4*i+3]+(alpha)/4*1j\n",
+    "\n",
+    "        H[4*i][4*i+4]=H[4*i][4*i+4]-(alpha)/4*1j\n",
+    "        H[4*i+1][4*i+5]=H[4*i+1][4*i+5]+(alpha)/4*1j\n",
+    "        H[4*i+2][4*i+6]=H[4*i+2][4*i+6]-(alpha)/4*1j\n",
+    "        H[4*i+3][4*i+7]=H[4*i+3][4*i+7]+(alpha)/4*1j\n",
+    "    return H\n",
+    "\n",
+    "\n",
+    "\n",
+    "def magnetic_field(B,H,N):\n",
+    "    for i in range(0,N):\n",
+    "        H[4*i][4*i+1]=H[4*i][4*i+1]+B/2\n",
+    "        H[4*i+1][4*i]=H[4*i+1][4*i]+B/2\n",
+    "        H[4*i+2][4*i+3]=H[4*i+2][4*i+3]-B/2\n",
+    "        H[4*i+3][4*i+2]=H[4*i+3][4*i+2]-B/2\n",
+    "    return H\n",
+    "\n",
+    "def superconducting_coupling(Delta,H,N):\n",
+    "    for i in range(0,N):\n",
+    "        H[4*i][4*i+3]=H[4*i][4*i+3]-Delta/2\n",
+    "        H[4*i+1][4*i+2]=H[4*i+1][4*i+3]+Delta/2\n",
+    "        H[4*i+2][4*i+1]=H[4*i+2][4*i+1]-Delta/2\n",
+    "        H[4*i+3][4*i]=H[4*i+3][4*i]+Delta/2\n",
+    "    return H\n",
+    "\n",
+    "def chemical_potential(mu,H,N):\n",
+    "    for i in range(0,N):\n",
+    "        H[4*i][4*i]=H[4*i][4*i]-mu/2\n",
+    "        H[4*i+1][4*i+1]=H[4*i+1][4*i+1]-mu/2\n",
+    "        H[4*i+2][4*i+2]=H[4*i+2][4*i+2]+mu/2\n",
+    "        H[4*i+3][4*i+3]=H[4*i+3][4*i+3]+mu/2\n",
+    "    return H\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1. +0.j ,  1. +0.j ,  0. +0.j , -1. +0.j , -0.5-0.5j,  0. +0.j ,\n",
+       "         0. +0.j ,  0. +0.j ],\n",
+       "       [ 1. +0.j , -1. +0.j ,  0.5+0.j ,  0. +0.j ,  0. +0.j , -0.5+0.5j,\n",
+       "         0. +0.j ,  0. +0.j ],\n",
+       "       [ 0. +0.j , -1. +0.j ,  1. +0.j , -1. +0.j ,  0. +0.j ,  0. +0.j ,\n",
+       "         0.5-0.5j,  0. +0.j ],\n",
+       "       [ 1. +0.j ,  0. +0.j , -1. +0.j ,  1. +0.j ,  0. +0.j ,  0. +0.j ,\n",
+       "         0. +0.j ,  0.5+0.5j],\n",
+       "       [-0.5-0.5j,  0. +0.j ,  0. +0.j ,  0. +0.j , -1. +0.j ,  1. +0.j ,\n",
+       "         0. +0.j , -1. +0.j ],\n",
+       "       [ 0. +0.j , -0.5+0.5j,  0. +0.j ,  0. +0.j ,  1. +0.j , -1. +0.j ,\n",
+       "         0.5+0.j ,  0. +0.j ],\n",
+       "       [ 0. +0.j ,  0. +0.j ,  0.5-0.5j,  0. +0.j ,  0. +0.j , -1. +0.j ,\n",
+       "         1. +0.j , -1. +0.j ],\n",
+       "       [ 0. +0.j ,  0. +0.j ,  0. +0.j ,  0.5+0.5j,  1. +0.j ,  0. +0.j ,\n",
+       "        -1. +0.j ,  1. +0.j ]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#add the different coupling terms to the Hamiltonian\n",
+    "\n",
+    "hopping_terms(t,H,N)\n",
+    "rashba_spin_orbit_coupling(alpha,H,N)\n",
+    "magnetic_field(B,H,N)\n",
+    "superconducting_coupling(Delta,H,N)\n",
+    "chemical_potential(mu,H,N)\n",
     "\n"
    ]
   }
