--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -399,22 +399,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "empty matrix Hamiltonian of size 8*8\n",
-      "[[0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n"
+      "empty matrix Hamiltonian of size 40*40\n",
+      "[[0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]\n",
+      " ...\n",
+      " [0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]]\n"
      ]
     }
    ],
@@ -428,7 +427,7 @@
     "Delta=1\n",
     "\n",
     "# define the size of the chain\n",
-    "N=2\n",
+    "N=10\n",
     "\n",
     "#define the empty matrix Hamiltonian\n",
     "\n",
@@ -440,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,31 +502,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-1. +0.j ,  1. +0.j ,  0. +0.j , -1. +0.j , -0.5-0.5j,  0. +0.j ,\n",
-       "         0. +0.j ,  0. +0.j ],\n",
-       "       [ 1. +0.j , -1. +0.j ,  0.5+0.j ,  0. +0.j ,  0. +0.j , -0.5+0.5j,\n",
-       "         0. +0.j ,  0. +0.j ],\n",
-       "       [ 0. +0.j , -1. +0.j ,  1. +0.j , -1. +0.j ,  0. +0.j ,  0. +0.j ,\n",
-       "         0.5-0.5j,  0. +0.j ],\n",
-       "       [ 1. +0.j ,  0. +0.j , -1. +0.j ,  1. +0.j ,  0. +0.j ,  0. +0.j ,\n",
-       "         0. +0.j ,  0.5+0.5j],\n",
-       "       [-0.5-0.5j,  0. +0.j ,  0. +0.j ,  0. +0.j , -1. +0.j ,  1. +0.j ,\n",
-       "         0. +0.j , -1. +0.j ],\n",
-       "       [ 0. +0.j , -0.5+0.5j,  0. +0.j ,  0. +0.j ,  1. +0.j , -1. +0.j ,\n",
-       "         0.5+0.j ,  0. +0.j ],\n",
-       "       [ 0. +0.j ,  0. +0.j ,  0.5-0.5j,  0. +0.j ,  0. +0.j , -1. +0.j ,\n",
-       "         1. +0.j , -1. +0.j ],\n",
-       "       [ 0. +0.j ,  0. +0.j ,  0. +0.j ,  0.5+0.5j,  1. +0.j ,  0. +0.j ,\n",
-       "        -1. +0.j ,  1. +0.j ]])"
+       "array([[-0.5+0.j,  0.5+0.j,  0. +0.j, ...,  0. +0.j,  0. +0.j,  0. +0.j],\n",
+       "       [ 0.5+0.j, -0.5+0.j,  0.5+0.j, ...,  0. +0.j,  0. +0.j,  0. +0.j],\n",
+       "       [ 0. +0.j, -0.5+0.j,  0.5+0.j, ...,  0. +0.j,  0. +0.j,  0. +0.j],\n",
+       "       ...,\n",
+       "       [ 0. +0.j,  0. +0.j,  0. +0.j, ..., -0.5+0.j,  0.5+0.j,  0. +0.j],\n",
+       "       [ 0. +0.j,  0. +0.j,  0. +0.j, ..., -0.5+0.j,  0.5+0.j, -0.5+0.j],\n",
+       "       [ 0. +0.j,  0. +0.j,  0. +0.j, ...,  0. +0.j, -0.5+0.j,  0.5+0.j]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,6 +530,46 @@
     "magnetic_field(B,H,N)\n",
     "superconducting_coupling(Delta,H,N)\n",
     "chemical_potential(mu,H,N)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.02335428+1.40162180e-02j  0.00158374-7.17162187e-02j\n",
+      "   0.01227648-1.29890299e-01j ... -0.04975025-1.54750629e-01j\n",
+      "  -0.09141883+2.01098723e-01j -0.15361288-5.28730965e-02j]\n",
+      " [-0.0101199 +1.89060912e-02j -0.01700485-4.06148335e-02j\n",
+      "  -0.02091784-8.73761388e-02j ... -0.12028834-1.09332335e-01j\n",
+      "  -0.22090292-2.16643585e-15j  0.15572442-4.62859229e-02j]\n",
+      " [-0.00516455+6.14821823e-02j  0.07381007+2.10419515e-15j\n",
+      "   0.14343674-6.68353956e-16j ... -0.22090292-1.08215029e-15j\n",
+      "  -0.12028834-1.09332335e-01j  0.25035051-3.50404303e-15j]\n",
+      " ...\n",
+      " [-0.0101199 +1.89060912e-02j  0.01700485+4.06148335e-02j\n",
+      "  -0.02091784-8.73761388e-02j ...  0.12028834+1.09332335e-01j\n",
+      "   0.22090292-4.11161572e-15j  0.15572442-4.62859229e-02j]\n",
+      " [-0.00516455+6.14821823e-02j -0.07381007+1.80386901e-15j\n",
+      "   0.14343674-1.05734230e-15j ...  0.22090292-1.96260711e-16j\n",
+      "   0.12028834+1.09332335e-01j  0.25035051+0.00000000e+00j]\n",
+      " [ 0.09707233+1.34287451e-15j  0.0390978 -1.92478348e-02j\n",
+      "  -0.07733385+3.86667860e-02j ...  0.09141883-2.01098723e-01j\n",
+      "   0.04975025+1.54750629e-01j  0.25012357+1.06573299e-02j]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import linalg as LA\n",
+    "\n",
+    "eigenvalues, eigenvectors = LA.eig(H)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
