--- a/TD6.ipynb
+++ b/TD6.ipynb
@@ -1213,7 +1213,7 @@
     "    density_of_states_hole_spin_down_sorted[i]=density_of_states_hole_spin_down[sorted_index[i]]\n",
     "    \n",
     "\n",
-    "plt.plot(n_V,density_of_states_spin_up_sorted[j]+density_of_states_spin_down_sorted[j]+density_of_states_hole_spin_up_sorted[j]+density_of_states_hole_spin_down_sorted[j],'p-',label='particle spin up')\n",
+    "plt.plot(n_V,density_of_states_spin_up_sorted[j]+density_of_states_spin_down_sorted[j]+density_of_states_hole_spin_up_sorted[j]+density_of_states_hole_spin_down_sorted[j],'p-')\n",
     "# # plt.plot(n_V,density_of_states_spin_down_sorted[j],'p-',label='particle spin down')\n",
     "# plt.plot(n_V,density_of_states_hole_spin_up_sorted[j],'p-',label='hole spin up')\n",
     "# plt.plot(n_V,density_of_states_hole_spin_down_sorted[j],label='hole spin down')\n",
